Refactor and optimize FastTTS backends, add Installer and pure Java KokoroBackend, fix Piper execution